HVAC Backup 2/objects/CP_Mappings__c(1).object
<CustomObject>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential Customer</fullName>
                </value>
                <value>
                    <fullName>Commercial Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>CP Mappings</relationshipLabel>
        <relationshipName>CP_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Existing Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Ticket_Assignment__c</fullName>
        <label>Service Ticket Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pincode/Sector Based Mapping</fullName>
                </value>
                <value>
                    <fullName>Tag Asset&apos;s CP</fullName>
                </value>
                <value>
                    <fullName>Tag SDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CP Mappings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Customer_Type__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Service_Ticket_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Commercial_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Customer_Type__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Service_Ticket_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Type__c</field>
            <operation>equals</operation>
            <value>Commercial Customer</value>
        </filters>
        <label>Commercial Mapping</label>
    </listViews>
    <listViews>
        <fullName>Residential_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Customer_Type__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Service_Ticket_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Type__c</field>
            <operation>equals</operation>
            <value>Residential Customer</value>
        </filters>
        <label>Residential Mapping</label>
    </listViews>
    <nameField>
        <label>CP Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>